<resources>
    <string name="app_name">MedView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--login screens-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="new_user_register_now">New User? Register here</string>
    <string name="already_have_an_account">Already have an account ?</string>

    <!--profile-->
    <string name="fName">Full Name</string>
    <string name="backLogin">Back to Login</string>
    <string name="email_title">Email Address</string>
    <string name="example_email">abc@gmail.com</string>
    <string name="username_title">User Name</string>
    <string name="gender_title">Gender</string>
    <string name="gender">Male</string>
    <string name="bday_title">Date of Birth</string>
    <string name="link_title">Profile Link</string>

    <string name="add_record">Add a new record</string>
    <!-- onboarding-->
    <string name="example_heading">Heading1</string>
    <string name="example_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu urna sed nulla porta mollis eget a magna. Aenean ac lectus vel mi feugiat euismod.</string>

    <!-- choice screen-->
    <string name="user">User</string>
    <string name="choose_your_role">Choose your Role</string>
    <string name="medical_team">Medical Team</string>


    <!-- Register User-->
    <string name="continu">CONTINUE</string>
    <string name="specialisation">SPECIALISATION</string>
    <string name="licence_number">LICENCE NUMBER</string>
    <string name="select_gender">SELECT GENDER</string>
    <string name="register">Register</string>
    <string name="name">NAME</string>
    <string name="age">AGE</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="blood_group">BLOOD GROUP</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="aadhar_number">AADHAR NUMBER</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="img">img</string>
    <string name="search_user">Search user by username</string>

</resources>