<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_wave__3_"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:textStyle="bold"

        android:textSize="32sp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/text"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginTop="40dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:id="@+id/user_image"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/useric"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="50dp"

                android:hint="@string/name"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"
                android:layout_marginRight="50dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="50dp"

                android:hint="@string/age"
                android:inputType="number"
                android:ems="10"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"
                android:layout_marginRight="50dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"

                android:ems="10"
                android:hint="@string/blood_group"
                android:inputType="text" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"

                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="number" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"

                android:ems="10"
                android:hint="@string/aadhar_number"
                android:inputType="number" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="50dp"

                android:hint="@string/dd_mm_yyyy"
                android:inputType="date"
                android:ems="10"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"
                android:layout_marginRight="50dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:text="@string/select_gender"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:layout_marginStart="50dp"/>
            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton

                    android:layout_width="wrap_content"
                    android:layout_marginStart="100dp"
                    android:text="@string/male"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_marginStart="100dp"
                    android:text="@string/female"
                    android:layout_height="wrap_content"/>

            </RadioGroup>

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:text="@string/continu" />


        </LinearLayout>
    </ScrollView>




</RelativeLayout>